# SOD322

./: README.md  clean.sh  count_lines_nodes.sh
c/: .gitignore  CMakeLists.txt  pagerank  q1  q1.c  q2.py
c/headers/: adjarray.h  adjmatrix.h  edgelist.h  poweriteration.h  utils.h
c/src/: adjarray.c  adjmatrix.c  edgelist.c  poweriteration.c  utils.c
julia/: LoadGraph.jl  core_decomposition.c  count_nodes.jl
julia/LoadGraph/: LoadGraph.jl  adjacency_list.jl  adjacency_matrix.jl  edge_list.jl  utils.jl
julia/TP1/: bfs.jl  load_tests.jl  triangles.jl
julia/TP2/: fast_kcore.jl  graph.jl  kcore.jl  load_graph.jl
julia/TP3/: community_detection.jl
python/: .gitignore  environment.yml
python/res/: compare_algorithms_results.csv
python/src/: featuresProcessing.py  functions.py  main.py
python/src/.ipynb_checkpoints/: run main-checkpoint.ipynb
python/src/julia/: functions.jl  main.jl
python/src/lfr_package/binary_networks/: benchmark  makefile
python/src/lfr_package/binary_networks/Sources/: simple.c
